# CodeEx

./: .bashrc  .gitignore  README.md  a.root  chisqIO.txt  chisqNO.txt  memo.ipynb  mp001_fillHistos.C  sin2t.cc  sin2t.py  sources.list  vect.cc
CMTtest/share/: run.py
CMTtest/src/: MuonWaveRec.cc
CPPtest/: Array.cc  Err2Err.cc  FuncProd.cc  gslinpt.cc
CPPtest/CMTtest/cmt/: requirements.txt
CPPtest/CMTtest/src/: MuonWaveRec.h
CPPtest/Class/: ClassTMinuit.cpp
CPPtest/Exercise/: AllSort.cpp
CPPtest/Exercise/Array_DoublePointer/: remove-duplicates-from-sorted-array.cpp  two-sum-ii-input-array-is-sorted.cpp
CPPtest/Exercise/LinkList_DoublePointer/: LinkedListCycleII.cpp  MergeKSortedLists.cpp  PartitionList.cpp  RemoveNthNode.cpp  TwoSortedLinkList.cpp
CPPtest/File/: tfile.cpp
CPPtest/Functions/: Arrays.cc  Err2Err.cc  FuncProd.cc  TemFCN.cpp
CPPtest/HPC/: IntOpenMP.cpp  MyIntegraltor.cc  SimThread.cpp
CPPtest/HPC/CUDA/: CMakeLists.txt  HelloWorld.cu  HelloWorld.cuh  MtAdd.py  MyIntegraltor.cu
CPPtest/HPC/CUDA/NvProject/: CMakeLists.txt  particle.cu  particle.h  tcu.cu  tcu.h  test.cu  v3.cu  v3.h
CPPtest/HPC/CUDA/project/: CMakeLists.txt  tmain.cpp
CPPtest/HPC/CUDA/project/job/: jobGPU.sh
CPPtest/HPC/CUDA/project/src/: tFCN.cpp  tFCN.h
CPPtest/HPC/CUDA/project/src/cudasrc/: CMakeLists.txt  HelloWorld.cu  HelloWorld.h
CPPtest/HPC/CUDA/w_root/: CMakeLists.txt  Link.hh  tmain.cpp  tmain.h
CPPtest/HPC/CUDA/w_root/src/: tFCN.cpp  tFCN.h  time_macro.h
CPPtest/HPC/CUDA/w_root/src/cudasrc/: HelloWorld.cu  HelloWorld.h
CPPtest/Macro/: Ee2Enu.cc
CPPtest/NameSpace/: Tnp.cc
CPPtest/Par/: Paren.cpp  Rate.cc
JunoARCon/: JunoARCon.cc
JunoARCon/include/: DeltaChisqReactor.hh  ReactorNuFlux.hh
JunoARCon/src/: DeltaChisqReactor.cc  OscillationFunction.cc
JunoARCon0/: CMakeLists.txt  JunoARCon.cc
JunoARCon0/include/: Link.hh
JunoARCon0/src/: IBDCrossSection.cc  ReactorNuFlux.cc
PythonTest/: pyroo.py
PythonTest/Crawl/: GetPics.py
PythonTest/Fit/: sci_fit_min.ipynb
PythonTest/GPU/: respMatrix_fill.root  tcupy.py
PythonTest/GPU/job/: jobGPU.sh
PythonTest/GPU/src/: Tnumba.py  tnumba.ipynb
PythonTest/Game/: pg1.py
PythonTest/HPC/: MProcess.py
PythonTest/files/: readknt.py
PythonTest/files/data/: AntineutrinoSpectrum_238U.knt
PythonTest/left/: Mat.ipynb  dt_data_1.py  test.py
PythonTest/plots/: InT_cc.d  ShowMH2.py  ShowMHcrx.py  ShowMHimpact.py  TH1test.cc
PythonTest/plots/Contour/: CosProfile.txt  DataProfile.py  DataProfile.txt  DataProfile1.py  DataProfile2.py  DeltaChisqContour.py
PythonTest/plots/Contour/Style/: Paper.mplstyle
PythonTest/plots/SimplePlot/: Axis.py  Drawchi.py  chisqIO.txt  chisqNO.txt  rroot.ipynb
PythonTest/plots/WaterFall/: ShowMH2.py  ShowMHcrx.py  ShowMHimpact.py
PythonTest/plots/pltOfficial/: JUNOInputs2020_10_29.root  Oscillation.ipynb  pyplot_two_subplots.py
PythonTest/torch/: ttorch.py
Roottest/: IBDXectiontest.cc  IBDXectiontest.hh  ResetR.cc  TreeApp.cc  app.root  fitConvolution.C  h2test.cc  min_parallel.cc  minfunct.cc  mtbb201_parallelHistoFill.C  tco.cc  timeMacro.h  tmap.cc
Roottest/EnergyLeakage/: ELout.cc  E_vis_r.C  E_vis_r.h  EvtSel.py  FitEL.cc  GetPE2R3.C  GetPE2R3.h  JUNOEnergyLeakage.root  LYCurve.root  NLELProfils.root  PE2R3.sh  R2Cos.root  REL.py  ReaderEL.cc  ShowLeakage.cc  ShowNL.cc  ViewTime.py  nCaptureT.C  nCaptureT.h  nPE2R3.root  totalPE2R3.root
Roottest/Graph/: Forum.cc  HistReturn.cc  div2.C  draw_dyb.cc  draw_dyb1.cc
Roottest/JunoARCon/: CMakeLists.txt  JunoARCon.hh  SPEfadc.C  average.C
Roottest/JunoARCon/include/: Background.hh  IBDCrossSection.hh  NeutrinoSepctrum.hh  OscillationFunction.hh
Roottest/JunoARCon/src/: Background.cc  IBDCrossSection.cc  NeutrinoSpectrum.cc  ReactorNuFlux.cc
Roottest/JunoARCon0/: DeltaChisqReactor.cc  DeltaChisqReactor.hh  ERes.cc  EvtSelector.C  EvtSelector.h
Roottest/JunoARCon0/include/: IBDCrossSection.hh  OscillationFunction.hh  ReactorNuFlux.hh
Roottest/JunoARCon0/src/: OscillationFunction.cc
Roottest/Min_Parallel/: TreeApp.cc  intParallel.cc  min_parallel.cc  mp001_fillHistos.C
Roottest/MultipleD/: _2dplot.cc
Roottest/TChaintest/: TimeStmp.cc  h1analysis.C  h1analysis.h  h1chain.C
Roottest/data/: .rootlogon.C  Container.cpp  DC.txt  DC1.txt  DCRENO.txt  DCtoyMC.txt  DCtoyMCDelta.txt  DCtoyMCDelta_stat.txt  DCtoyMC_stat.txt  DYBshape.txt  DYBshapeDelta.txt  DYBshapeDelta_stat.txt  DYBshape_stat.txt  GL2D.cc  GLint.cc  IBDXectiontest.cc  IBDXectiontest.hh  L_over_E.cc  RENO.txt  RENOshape.txt  RENOshapeDelta.txt  RENOshapeDelta_stat.txt  RENOshape_stat.txt  ShowNL.cc  ShowNOIO.cc  fitConvolution.C  gettheta.C  histra.cc  show3d2dDiff.cc  timeMacro.h  tmap.cc
Roottest/data/Bkg/: BkgInter.cpp
Roottest/data/backup/: DC.txt  DC1.txt  RENO.txt
Roottest/eff/: EffTest.cc  TSmear.cxx  TSmear.h  TSmear_fixed.cxx  testrun.cxx
Roottest/histSolver/: EresFea.cc  InterSolve.cc  JunoNonL.root  NonLinear.cc  histPar.cc
Roottest/matrix/: t_matrix.cc
Roottest/roofit-stats/: NuMuToNuE_Oscillation.cxx  NuMuToNuE_Oscillation.h
Roottest/xml/: XML1.cc  XML1.cpp
ShellTest/: GeScript.sh  HV_new.sh  PMT_Input.txt  Pre2D.sh  Pre2D0.sh  Pre2D1.sh  Pre2D2.sh  Pre2D3.sh  Pre2D4.sh  Pre2D5.sh  pmt_list.txt  range.sh  readList.sh  readList_v2.sh  ~$PMT_387th.xlsx
Test/: InT.cc  NeutrinoSepctrum.hh  NeutrinoSpectrum.cc  chisqIOYB.txt  chisqNOYB.txt  videotest.cc
Test/plots/: EnergyRe.cc  InT_cc_ACLiC_dict_rdict.pcm  f.root
WinShell/: CpPMT_input.bat  CutData.bat  CutOldData.bat  MoveCopyReName.bat  rename.bat  tcom.bat
data/: IO2019.root  IOYB.root  NO2019.root  NOYB.root
